--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "marked": "^4.0.15",
     "vue": "^3.2.31",
     "vue-router": "^4.0.13"
   },
