--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "backend",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "test": "node app.js",
+    "Start": "node app.js",
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "keywords": [
     "backend"
@@ -13,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
