--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,7 @@
     "bootstrap": "^5.1.3",
     "marked": "^4.0.15",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.13"
-  },
-  "devDependencies": {
+    "vue-router": "^4.0.13",
     "@vitejs/plugin-vue": "^2.2.2",
     "vite": "^2.8.4"
   }
