--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "node app.js",
-    "Start": "node app.js",
+    "start": "node app.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "keywords": [
