--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,9 @@
     "vue-router": "^4.0.13",
     "@vitejs/plugin-vue": "^2.2.2",
     "vite": "^2.8.4"
+  },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.3.2"
   }
 }
