--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "16.13.2",
+    "npm": "8.3.2"
   }
 }
