--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "test": "cross-env NODE_ENV=test API_URL=localhost:3000 vite preview --port 5050"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@vitejs/plugin-vue": "^2.2.2",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "marked": "^4.0.15",
+    "vite": "^2.8.4",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.13",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "vite": "^2.8.4"
+    "vue-router": "^4.0.13"
   },
   "engines": {
     "node": "16.13.2",
     "npm": "8.3.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
