--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "backend",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js",
+    "test": "cross-env NODE_ENV=test && node app.js",
     "start": "node app.js",
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
@@ -21,10 +21,14 @@
     "express": "^4.18.1",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.8.0",
     "uuid": "^8.3.2"
   },
   "engines": {
     "node": "16.13.2",
     "npm": "8.3.2"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
